--- a/index.html
+++ b/index.html
@@ -5757,6 +5757,9 @@ window.getCurrentDate = function() {
       const showMoreBtn = alertBox.querySelector('.show-more-btn');
       if(showMoreBtn) {
         showMoreBtn.onclick = () => {
+          // Add all current alert spots to dismissed list (same as Clear Alert)
+          currentAlertSpots.forEach(spot => dismissedAlerts.add(spot.id));
+          console.log('🔕 User dismissed alert via Show More:', currentAlertSpots.map(s => s.name).join(', '));
           hideCenteredAlert();
           openDetailsModal(s.id);
         };
@@ -5842,6 +5845,9 @@ window.getCurrentDate = function() {
       alertBox.querySelectorAll('.show-more-btn').forEach(btn => {
         btn.onclick = () => {
           const spotId = btn.dataset.spotId;
+          // Add all current alert spots to dismissed list (same as Clear Alert)
+          currentAlertSpots.forEach(spot => dismissedAlerts.add(spot.id));
+          console.log('🔕 User dismissed alert via Show More:', currentAlertSpots.map(s => s.name).join(', '));
           hideCenteredAlert();
           openDetailsModal(spotId);
         };
