--- a/index.html
+++ b/index.html
@@ -180,21 +180,21 @@
     right: 20px !important;
     left: auto !important;
     transform: none !important;
-    width: 56px !important;
-    height: 56px !important;
+    width: 60px !important;
+    height: 60px !important;
     max-width: none !important;
     padding: 0 !important;
     border-radius: 50% !important;
     display: flex !important;
-    align-items: center;
-    justify-content: center;
+    align-items: center !important;
+    justify-content: center !important;
     opacity: 1 !important;
     pointer-events: auto !important;
     cursor: pointer !important;
     background: #f59e0b !important;
-    border: 3px solid #422d1e !important;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3) !important;
-    animation: pulse-alert 1.5s ease-in-out infinite;
+    border: 4px solid #422d1e !important;
+    box-shadow: 0 6px 20px rgba(245, 158, 11, 0.8) !important;
+    z-index: 1000000 !important;
   }
   
   @keyframes pulse-alert {
@@ -5923,7 +5923,7 @@ window.getCurrentDate = function() {
       const safetyTipsBtn = alertBox.querySelector('.safety-tips-btn');
       if(safetyTipsBtn) {
         safetyTipsBtn.onclick = () => {
-          hideCenteredAlert();
+          minimizeCenteredAlert();
           openSafetyTipsModal(s.species);
         };
       }
@@ -6005,7 +6005,7 @@ window.getCurrentDate = function() {
       alertBox.querySelectorAll('.safety-tips-btn').forEach(btn => {
         btn.onclick = () => {
           const species = btn.dataset.species;
-          hideCenteredAlert();
+          minimizeCenteredAlert();
           openSafetyTipsModal(species);
         };
       });
@@ -6028,12 +6028,19 @@ window.getCurrentDate = function() {
 
   // Minimize centered alert (show as small flashing icon)
   function minimizeCenteredAlert() {
+    console.log('📌 minimizeCenteredAlert called');
+    console.log('📌 Before minimizing - classes:', alertBox.className);
+    console.log('📌 Before minimizing - display:', alertBox.style.display);
+    
     // Ensure alert is visible first
     alertBox.style.display = 'block';
     // Keep the show class for proper state
     alertBox.classList.add('show');
     // Add minimized class - this will override styles with !important
     alertBox.classList.add('minimized');
+    
+    console.log('📌 After minimizing - classes:', alertBox.className);
+    console.log('📌 After minimizing - display:', alertBox.style.display);
     console.log('📌 Alert minimized - showing as pulsing icon');
   }
 
