updating agent instructions and alert minimise UI

--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
     display:none; 
   }
   
-  /* Minimized alert state - small flashing icon */
+  /* Minimized alert state - small icon in top right corner of map */
   #alertBox.minimized {
-    top: auto !important;
-    bottom: 80px !important;
+    top: 20px !important;
+    bottom: auto !important;
     right: 20px !important;
     left: auto !important;
     transform: none !important;
@@ -192,8 +192,8 @@
     pointer-events: auto !important;
     cursor: pointer !important;
     background: #f59e0b !important;
-    border: 4px solid #422d1e !important;
-    box-shadow: 0 6px 20px rgba(245, 158, 11, 0.8) !important;
+    border: none !important;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3) !important;
     z-index: 1000000 !important;
   }
   
