--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     top:50%; 
     left:50%; 
     transform:translate(-50%,-50%); 
-    z-index: 1000000; 
+    z-index: 998; 
     background:#fff7ed; 
     color: #422d1e; 
     border:2px solid #f59e0b; 
