--- a/index.html
+++ b/index.html
@@ -1513,9 +1513,9 @@
 </div>
 
 <!-- Profile Modal -->
-<div id="profileModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4" style="z-index: 9999;">
-  <div class="bg-white rounded-lg shadow-xl max-w-2xl w-full overflow-y-auto" style="background-color: #f2eceb; border: 2px solid #d4cac7; max-height: calc(100vh - 100px);">
-    <div class="flex items-center justify-between p-6 border-b sticky top-0 bg-inherit z-10" style="border-color: #d4cac7; background-color: #f2eceb;">
+<div id="profileModal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 p-4 overflow-y-auto" style="z-index: 9999;">
+  <div class="bg-white rounded-lg shadow-xl max-w-2xl w-full my-auto" style="background-color: #f2eceb; border: 2px solid #d4cac7;">
+    <div class="flex items-center justify-between p-6 border-b" style="border-color: #d4cac7; background-color: #f2eceb;">
       <h2 class="text-2xl font-bold" style="color: #422d1e;">My Profile</h2>
       <button id="closeProfileModal" class="text-gray-500 hover:text-gray-700">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
