--- a/index.html
+++ b/index.html
@@ -428,9 +428,15 @@
   body.dark-mode #useGPSBtnModal,
   body.dark-mode #testVibrateBtnModal,
   body.dark-mode #closeTestingModalBottom,
+  body.dark-mode button[style*="background-color: #422d1e"] {
+    background-color: var(--text-primary) !important;
+    color: #422d1e !important;
+  }
+  
+  /* Show More buttons - beige background with dark brown text */
   body.dark-mode #showMoreBtn,
   body.dark-mode .show-more-btn,
-  body.dark-mode button[style*="background-color: #422d1e"] {
+  body.dark-mode button.show-more-btn.text-white {
     background-color: var(--text-primary) !important;
     color: #422d1e !important;
   }
@@ -448,7 +454,9 @@
   
   /* Safety Tips buttons - darker green in dark mode */
   body.dark-mode .safety-tips-btn,
-  body.dark-mode button.safety-tips-btn.bg-green-600 {
+  body.dark-mode button.safety-tips-btn,
+  body.dark-mode button.safety-tips-btn.bg-green-600,
+  body.dark-mode button.safety-tips-btn.text-xs.bg-green-600 {
     background-color: #047857 !important; /* green-700 - darker than default green-600 */
     border-color: #047857 !important;
   }
