--- a/index.html
+++ b/index.html
@@ -436,7 +436,8 @@
   /* Show More buttons - beige background with dark brown text */
   body.dark-mode #showMoreBtn,
   body.dark-mode .show-more-btn,
-  body.dark-mode button.show-more-btn.text-white {
+  body.dark-mode button.show-more-btn.text-white,
+  body.dark-mode button.text-xs.text-white.show-more-btn {
     background-color: var(--text-primary) !important;
     color: #422d1e !important;
   }
@@ -456,7 +457,8 @@
   body.dark-mode .safety-tips-btn,
   body.dark-mode button.safety-tips-btn,
   body.dark-mode button.safety-tips-btn.bg-green-600,
-  body.dark-mode button.safety-tips-btn.text-xs.bg-green-600 {
+  body.dark-mode button.text-xs.bg-green-600.safety-tips-btn,
+  body.dark-mode button.safety-tips-btn.text-xs.bg-green-600.hover\:bg-green-700 {
     background-color: #047857 !important; /* green-700 - darker than default green-600 */
     border-color: #047857 !important;
   }
@@ -465,6 +467,23 @@
   body.dark-mode button.safety-tips-btn.bg-green-600:hover {
     background-color: #065f46 !important; /* green-800 - even darker on hover */
     border-color: #065f46 !important;
+  }
+  
+  /* Override Tailwind bg-green-600 for safety tips buttons specifically */
+  body.dark-mode button.safety-tips-btn.bg-green-600.text-white,
+  body.dark-mode .safety-tips-btn.bg-green-600 {
+    background-color: #047857 !important;
+  }
+  
+  /* Override Tailwind hover:bg-green-700 */
+  body.dark-mode button.safety-tips-btn.hover\:bg-green-700:hover {
+    background-color: #065f46 !important;
+  }
+  
+  /* Override Tailwind text-white for show-more buttons */
+  body.dark-mode button.show-more-btn.text-white,
+  body.dark-mode button#showMoreBtn.text-white {
+    color: #422d1e !important;
   }
   
   /* Leaflet map zoom controls - dark background with light symbols */
