--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   .btn-secondary:hover { background-color: var(--bg-tertiary) !important; }
   
   .btn-success {
-    background-color: #10B981 !important;
+    background-color: #047857 !important;
     color: white !important;
     transition: opacity 0.2s ease;
   }
