--- a/index.html
+++ b/index.html
@@ -3933,6 +3933,8 @@ window.getCurrentDate = function() {
       lng: Number(spot.lng),
       risk: spot.risk,
       is_preseason: spot.isPreseason === true,
+      safe_passage_count: spot.safePassageCount || 0,
+      last_safe_passage: spot.lastSafePassage || null,
       user_id: currentUser.id,
       created_by_name: userProfile?.display_name || currentUser.email.split('@')[0]
     };
